fix: search result still visible after clear search box

--- a/docs/template/styles/main.css
+++ b/docs/template/styles/main.css
@@ -2,6 +2,6 @@
 
 /* Checkout https://getbootstrap.com/docs/5.3/customize/color/ for more customization options */
 body {
-  --bs-link-color-rgb: 66, 184, 131;
-  --bs-link-hover-color-rgb: 66, 184, 131;
+  --bs-link-color-rgb: 66, 184, 131 !important;
+  --bs-link-hover-color-rgb: 64, 180, 128 !important;
 }
